# PythonQuizBot

./: .env.example  .pre-commit-config.yaml  README.md  notes.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_PythonQuizBot_prod.bash
app/: __main__.py  jobs.py  quiz_parser.py  settings.py
app/bot/: __init__.py  dumpable_memory_storage.py  pages.py  types.py
app/database/: __init__.py  base.py  models.py
app/jobs/: __init__.py  post_quiz.py
app/notion_utils/: fun.py  models.py  utils.py
app/utils/: aux_utils.py  logging_utils.py  quiz_utils.py
app_data/quizzes/: 1. Basic For Beginners.py  10. Dictionary.py  11. Set.py  12. Tuple.py  13. Random.py  2. Variables and Data Types.py  21. Dict_1.py  22. Dict_2.py  23. Dict_3.py  3. Operators and Expressions.py  4. Input and Output.py  5. Functions.py  51. Python Sequences_ A Comprehensive Guide.py  52. Python's unittest_ Writing Unit Tests for Your Code.py  53. Write Pythonic and Clean Code With namedtuple.py  54. What's Lazy Evaluation in Python_.py  55. Format Floats Within F-Strings.py  56. Build Command-Line Interfaces With Python's argparse.py  57. A Practical Introduction to Web Scraping in Python.py  58. Get Started With Django_ Build a Portfolio App.py  59. Inheritance and Composition_ A Python OOP Guide.py  6. If Else and Loops.py  60. Install and Execute Python Applications Using pipx.py  61. Supercharge Your Classes With Python super().py  62. Managing Multiple Python Versions With pyenv.py  63. Python Modules and Packages.py  64. Practical Prompt Engineering.py  65. Reading and Writing WAV Files in Python.py  66. Model-View-Controller (MVC) in Python Web Apps_ Explained With Lego.py  67. Data Classes in Python.py  68. Python Raw Strings.py  69. Working With JSON Data in Python.py  7. Numbers.py  8. String.py  (+2 more)
log_configs/: dev.json  prod.json
migrations/: env.py
scripts/: auto_translate.py  drop_tables_sqlite.sql  get_ext_env.py  upload_backup.py
(+28 files in other folders)
