[project]
name = "quizbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram~=3.3.0",
    "aiosqlite~=0.17.0",
    "alembic~=1.10.2",
    "cachetools==5.3.1",
    "colorama~=0.4.4",
    "colorlog~=6.7.0",
    "pydantic-settings~=2.2.0",
    "python-dotenv~=1.0.0",
    "sqlalchemy~=2.0.23",
]

[dependency-groups]
dev = [
    "mypy==1.6.1",
    "pre-commit==3.5.0",
    "pytest==7.4.0",
    "pytest-asyncio==0.21.1",
    "ruff>=0.11.7",
    "types-aiofiles==23.2.0.0",
    "types-cachetools==5.3.0.6",
    "types-colorama==0.4.15.12",
    "types-pyopenssl==23.2.0.2",
    "types-requests==2.31.0.10",
    "typing-extensions==4.7.1",
]

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "venv",
    ".venv",
    ".env",
    ".idea",
    ".vscode",
    "app_data",
]
line-length = 79
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    #"SIM",
    # isort
    "I",
]
ignore = []

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]


[tool.mypy]
strict = false
exclude = [
    "^venv/.*$",
    "^migrations/.*$",
    "^tests/.*$",
    "^scripts/.*$",
    "^app_data/.*$"
]

plugins = [
#  "sqlalchemy.ext.mypy.plugin",
  "pydantic.mypy"
  ]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = "aiogram.*,apscheduler.*,pydantic_settings.*"
ignore_missing_imports = true


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]
python_files = "test_*.py"
pythonpath = ["."]